<resources>
    <string name="app_name">PiPan</string>
    <!--strings for Menu-->
    <string name="start_menu_settings1">Host1 Settings</string>
    <string name="start_menu_settings2">Host2 Settings</string>
    <!--strings for unit dialog-->
    <string name="unit_ip_addr">IP Address</string>
    <string name="unit_user_name">User Name</string>
    <string name="unit_password">Password</string>
    <string name="unit_working_dir">Working Directory</string>
    <string name="command_line_prompt">Command Line Prompt</string>
    <!--strings for bottom menu-->
    <string name="title_activity_main">PiPan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--strings for home buttons-->
    <string name="home_test_button">test</string>
    <string name="home_start_button">connect</string>
    <string name="home_end_button">disconnect</string>
    <string name="option_end_sequence">End Sequence</string>
    <string name="home_run_pan_py">Run pan.py</string>
    <string name="home_copy_log">Copy log</string>
    <string name="home_hotspot">Hotspot</string>
    <string name="home_shutdown">Shutdown</string>
    <string name="radio_button_host_1">Host 1</string>
    <string name="radio_button_host_2">Host 2</string>
</resources>