<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/host_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/host_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/hotspot_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom = "10dp">

        <RadioButton android:id="@+id/radio_host1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_host_1"
            android:layout_weight="1"/>
        <RadioButton android:id="@+id/radio_host2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_host_2"
            android:layout_weight="1"/>
    </RadioGroup>

    <Button
        android:id="@+id/test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_test_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ctrl_c_button"
        android:layout_marginBottom = "56dp"
        />
    <Button
        android:id="@+id/ctrl_c_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ctrl-C"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/test_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom = "56dp"
        />
    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_start_button"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@id/test_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/disconnect_button"
        android:layout_marginBottom = "10dp"
        />
    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_end_button"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@id/ctrl_c_button"
        app:layout_constraintLeft_toRightOf="@+id/connect_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom = "10dp"
        />
    <Button
        android:id="@+id/start_pan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_run_pan_py"
        app:layout_constraintBottom_toTopOf="@id/connect_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/copy_log_button"
        android:layout_marginBottom = "10dp"
        />
    <Button
        android:id="@+id/copy_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_copy_log"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@id/disconnect_button"
        app:layout_constraintLeft_toRightOf="@+id/start_pan_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom = "10dp"
        />
    <Button
        android:id="@+id/hotspot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_hotspot"
        app:layout_constraintBottom_toTopOf="@id/start_pan_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shutdown_button"
        android:layout_marginBottom = "10dp"
        />
    <Button
        android:id="@+id/shutdown_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_shutdown"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@id/copy_log_button"
        app:layout_constraintLeft_toRightOf="@+id/hotspot_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom = "10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>